<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/lblAboutVersion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/about_version" />

    <TextView
        android:id="@+id/lblAboutDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblAboutVersion"
        android:maxLines="5"
        android:paddingTop="16dp"
        android:scrollHorizontally="false"
        android:text="@string/about_description" />

    <TextView
        android:id="@+id/lblCopyright"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblAboutDescription"
        android:maxLines="5"
        android:paddingTop="16dp"
        android:scrollHorizontally="false"
        android:textStyle="italic"
        android:text="@string/about_copyright" />

    <RelativeLayout
        android:id="@+id/BottomLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/bReturn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/returnword" />
    </RelativeLayout>

</RelativeLayout>