<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <Button
        android:id="@+id/bClean"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/clean" />

    <Button
        android:id="@+id/bAbout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bClean"
        android:text="@string/about" />

    <RelativeLayout
        android:id="@+id/BottomLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/bExit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit" />
    </RelativeLayout>

</RelativeLayout>